web-app/themes/is/css/styles.css
/* ... */
.wizard #steps p {
    padding: 0 5px;
    margin: 0;
    width: 120px;
}

.wizard #steps .current p {
    display: block;
    padding: 0 10px;
    margin: 0;
    width: 130px;
}

/*
////////////////////////////////////////////////////////////////////////////////
//	Postit Details
////////////////////////////////////////////////////////////////////////////////
*/

.postit-details .postit-details-information p, .postit-details-information .line .content, #version-tab p {
    padding: 2px 0 4px 0;
    margin: 0;
}

.postit-details .colset-2 .col2 {
    width: 152px;
    padding-top: 10px;
}

.postit-details .colset-2 .col1 {
    width: 398px;
}

.postit-details-information .line .content {
    float: left;
    width: 356px;
    margin-left: 4px;
}

.postit-details-information .line .content p {
    background-image: none;
}

.postit-details-information .line {
    float: left;
    width: 100%;
}

.postit-details-information .line strong {
    float: left;
}

/*
////////////////////////////////////////////////////////////////////////////////
//	Dashboard List News
////////////////////////////////////////////////////////////////////////////////
*/

.dashboard {
    padding: 10px;
}

.dashboard .colset-2 .col1 {
    width: 50%;
}

.dashboard panel-box-content {
    max-height: 200px;
    overflow: auto;
}

.list-news {
    padding: 0;
    margin: 0;
}

.list-news .news-item {
    background-position: 8px 4px;
    background-repeat: no-repeat;
    padding: 2px 0;
    padding-left: 30px;
}

.list-news li, .list-comments li, .list-acceptance-tests li {
    padding: 5px 0 7px 0;
    list-style: none;
    list-style-type: none;
}

.list-news li p, .list-comments li p, .list-acceptance-tests li p {
    padding: 0;
    margin: 0;
    line-height: 15px;
}

/*
////////////////////////////////////////////////////////////////////////////////
//	Release Plan
////////////////////////////////////////////////////////////////////////////////
*/

.event-content-list .postit-rect {
    margin: 1px auto;
}

.event-header .drap-container {
    position: relative;
}

.event-header .dropmenu {
    position: absolute;
    left: 157px;
    top: 2px;
}

.event-header-label a {
    color: #2165A5;
}

.event-header-label a:hover{
    text-decoration: none;
}

.event-header-label .event-header-velocity {
    float: right;
}

.event-container {
    float: left;
    text-align: left;
}

.event-header {
    padding: 5px;
    border-right-width: 1px;
    border-bottom-width: 1px;
    background-position: 0 -83px;
    background-repeat: repeat-x;
    line-height: 15px;
    width: 170px;
}

.event-content-list {
    border-right-width: 1px;
}

.event-content-list .ui-drop-hover-postit-rect {
    width: 150px;
    height: 89px;
    margin: 1px auto;
    border-width: 1px;
}

.event-overflow {
    position: relative;
    top: 0;
    bottom: 25px;
    overflow: hidden;
}

.event-select {
    background-position: 0 -38px;
    bottom: 7px;
    height: 27px;
    left: 270px;
    line-height: 27px;
    position: fixed;
    right: 4px;
    text-align: center;
    border-top-width: 1px;
}

.window-fullscreen .event-select {
    bottom:0px;
    left:0px;
}

.event-select-item {
    margin-left: 5px;
    margin-right: 5px;
    cursor: pointer;
}

/*
////////////////////////////////////////////////////////////////////////////////
//	About dialog
////////////////////////////////////////////////////////////////////////////////
*/

#license {
    color: black;
}

#license-tab .field-information {
    border-width: 1px;
}

/*
////////////////////////////////////////////////////////////////////////////////
//	kanban
////////////////////////////////////////////////////////////////////////////////
*/

.kanban {
    margin: 0;
    padding: 0;
}

.kanban .kanban-col:first-child {
    width: 150px;
}

.kanban .kanban-col {
    min-width: 155px;
}

.kanban .kanban-col {
    width: auto;
    vertical-align: top;
    white-space: nowrap;
}

.kanban table.kanban {
    width: 100%;
}

.kanban .kanban-cell {
    white-space: normal;
}

.kanban th {
    width: 500px;
}

.kanban-cell .postit, .kanban-cell .postit-rect {
    float: left;
}

.postit-label.postit-sortable {
    cursor: move;
}

.kanban .ui-sortable .ui-selectable-disabled .postit-label {
    cursor: default;
}

.kanban .kanban-label {
}

.kanban .table-line td.kanban-cell {
    padding: 4px 4px 6px
}

.kanban .postit-placeholder {
    display: block;
    width: 153px;
    height: 89px;
    margin: 0;
    border-width: 1px;
    float: left;
}

/*
////////////////////////////////////////////////////////////////////////////////
//	Browse
////////////////////////////////////////////////////////////////////////////////
*/

.browse .browse-list .ico {
    float: left;
    padding: 0px 7px 0 0;
    width: 28px;
    height: 28px;
}

.field-choose-state-hover {
    background-color: #FFFAAE;
}

.browse .col1 .browse-list {
    padding-left: 10px;
    height: 355px;
}

.browse .col2 .browse-list {
    padding-left: 10px;
    height: 250px;
}

.browse .browse-list li {
    padding: 0;
    margin: 0;
    list-style: none;
    list-style-type: none;
}

.browse .browse-list .browse-item {
    width: 169px;
    padding-top: 4px;
    padding-left: 4px;
    margin: 3px;
    cursor: pointer;
    height: 32px;
}

.browse .browse-list p {
    padding: 0;
    margin: 0;
    line-height: 13px;
}

.browse .colset-2 .col1 {
    width: 25%;
}

.browse .colset-2 .col2 {
    width: 75%;
}

.browse .browse-legend {
    padding: 5px 0 2px;
    padding-left: 6px;

    margin: 0;
    background-position: 0 -131px;
    line-height: 14px;
    border-bottom-width: 1px;
    white-space: nowrap;
}

.browse .browse-content {
    padding: 10px 20px;
    height: 337px;
}

.browse .browse-content .browse-informations {
    padding-bottom: 8px;
    line-height: 16px;
}

.browse .browse-content .browse-informations .ico {
    float: left;
    padding: 7px 15px 0 0;
    width: 80px;
    height: 80px;
}
/* ... */

